--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,12 @@
-<!-- templates/base.html -->
+{% load static %}
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>{% block title %}Jabberwock{% endblock title %}</title>
+  <link rel='stylesheet' href="{% static 'css/base.css' %}">
+</head>
+<body>
 <header>
   <a href="{% url 'home' %}">Home</a> |
   <a href="{% url 'about' %}">About</a>
@@ -6,3 +14,5 @@
 
 {% block content %}
 {% endblock content %}
+</body>
+</html>
