--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,7 @@
-<!-- templates/home.html -->
 {% extends 'base.html' %}
+{% load static %}
+
+{% block title %}Welcome Home{% endblock title %}
 
 {% block content %}
 <h1>Homepage</h1>
