--- a/templates/home.html
+++ b/templates/home.html
@@ -5,4 +5,5 @@
 
 {% block content %}
 <h1>Homepage</h1>
+<img class="bookcover" src="{% static 'images/dfp_vincent.png' %}">
 {% endblock content %}
