--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,40 @@
 {% block title %}Welcome Home{% endblock title %}
 
 {% block content %}
-<h1>Homepage</h1>
-<img class="bookcover" src="{% static 'images/dfp_vincent.png' %}">
+<div class="container">
+  <p>
+    <h2>Homepage</h2>
+    <div id="demo" class="carousel slide" data-ride="carousel">
+
+    <!-- Indicators -->
+    <ul class="carousel-indicators">
+      <li data-target="#demo" data-slide-to="0" class="active"></li>
+      <li data-target="#demo" data-slide-to="1"></li>
+      <li data-target="#demo" data-slide-to="2"></li>
+    </ul>
+
+    <!-- The slideshow -->
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img alt="Los Angeles" src="{% static 'images/babel_lib1.jpg' %}">
+      </div>
+      <div class="carousel-item">
+        <img alt="Chicago" src="{% static 'images/babel_lib2.jpg' %}">
+      </div>
+      <div class="carousel-item">
+        <img alt="New York" src="{% static 'images/babel_lib3.jpg' %}">
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="carousel-control-prev" href="#demo" data-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </a>
+    <a class="carousel-control-next" href="#demo" data-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </a>
+
+  </div>
+  </p>
+</div>
 {% endblock content %}
