Migrate to allauth. Resolves #5

--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,13 +1,17 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
-{% block title %}Log Out{% endblock title %}
+{% block title %}Log Out{% endblock %}
 
 {% block content %}
+<div class="container">
   <h2>Log Out</h2>
   <p>Are you sure you want to log out?</p>
-  <form method="post" action="{% url 'logout' %}">
+  <form class="col-md-4" method="post" action="{% url 'account_logout' %}">
     {% csrf_token %}
-    {{ form.as_p}}
+    {{ form|crispy }}
     <button class="btn btn-danger" type="submit">Log Out</button>
   </form>
+  </p>
+</div>
 {% endblock content %}
