--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -2,23 +2,28 @@
 {% load crispy_forms_tags %}
 
 {% load i18n %}
+{% load account %}
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
-
+<div class="container">
+  <p>
+    <p>
     <h2>{% trans "Password Reset" %}</h2>
     {% if user.is_authenticated %}
-    <p><strong>Note:</strong> You are already logged in.</p>
+    {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
-
     <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
-
-    <form method="POST" action="{% url 'password_reset' %}" class="col-md-4 password_reset">
+    <p>
+    <form class="col-md-4" method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
         {{ form|crispy }}
-        <button class="btn btn-primary mb-2" type="submit">{% trans 'Reset My Password' %}</button>
+        <button class="btn btn-success" type="submit">{% trans 'Reset My Password' %}</button>
     </form>
-
+    </p>
     <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+    </p>
+  </p>
+</div>
 {% endblock %}
