--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -4,11 +4,14 @@
 {% block title %}Log In{% endblock title %}
 
 {% block content %}
+<div class="container">
+  <p>
   <h2>Log In</h2>
   <form class="col-md-4" method="post">
     {% csrf_token %}
     {{ form|crispy }}
     <button class="btn btn-success" type="submit">Log In</button>
-    <a class="btn btn-secondary" type="submit" href="{% url 'password_reset' %}">Forgot Password?</a>
   </form>
+  </p>
+</div>
 {% endblock content %}
