--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -6,14 +6,15 @@
 {% block title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
+<div class="container">
+  <p>
   <h2>{% trans "Change Password" %}</h2>
-  <p>Please enter your old password, for security's sake, and then enter
-  your new password twice so we can verify you typed it in correctly.</p>
 
-  <form method="POST" action="{% url 'password_change' %}" class="col-md-6 password_change">
+  <form class="col-md-4" method="POST" action="{% url 'account_change_password' %}" class="password_change">
       {% csrf_token %}
       {{ form|crispy }}
       <button class="btn btn-success" type="submit">{% trans 'Change Password' %}</button>
-      <a class="btn btn-secondary" type="submit" href="{% url 'password_reset' %}">{% trans "Forgot Password?" %}</a>
   </form>
+  </p>
+</div>
 {% endblock %}
