--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -4,10 +4,14 @@
 {% block title %}Sign Up{% endblock title %}
 
 {% block content %}
+<div class="container">
+  <p>
   <h2>Sign Up</h2>
-  <form class="col-md-6" method="post">
+  <form class="col-md-4 method="post">
     {% csrf_token %}
     {{ form|crispy }}
     <button class="btn btn-success" type="submit">Sign Up</button>
   </form>
+  </p>
+</div>
 {% endblock content %}
