--- a/templates/base.html
+++ b/templates/base.html
@@ -23,10 +23,10 @@
           <a class="p-2 text-dark" href="{% url 'home' %}">Home</a>
           <a class="p-2 text-dark" href="{% url 'about' %}">About</a>
         {% if user.is_authenticated %}
-          <a class="p-2 text-dark" href="{% url 'logout' %}">Logout</a>
+          <a class="p-2 text-dark" href="{% url 'account_logout' %}">Logout</a>
         {% else %}
-          <a class="p-2 text-dark" href="{% url 'login' %}">Login</a>
-          <a class="p-2 text-dark" href="{% url 'signup' %}">Signup</a>
+          <a class="p-2 text-dark" href="{% url 'account_login' %}">Login</a>
+          <a class="p-2 text-dark" href="{% url 'account_signup' %}">Signup</a>
         {% endif %}
       </nav>
     </div>
