--- a/templates/base.html
+++ b/templates/base.html
@@ -13,24 +13,62 @@
   <link rel='stylesheet' href="{% static 'css/base.css' %}">
 </head>
 <body>
-<header>
-      <!-- Fixed navbar -->
-    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4
-     mb-3 bg-white border-bottom shadow-sm">
-      <a href="{% url 'home' %}" class="navbar-brand my-0 mr-md-auto
-      font-weight-normal">Happy Fun Bouncy Template</a>
-      <nav class="my-2 my-md-0 mr-md-3">
-          <a class="p-2 text-dark" href="{% url 'home' %}">Home</a>
-          <a class="p-2 text-dark" href="{% url 'about' %}">About</a>
-        {% if user.is_authenticated %}
-          <a class="p-2 text-dark" href="{% url 'account_logout' %}">Logout</a>
-        {% else %}
-          <a class="p-2 text-dark" href="{% url 'account_login' %}">Login</a>
-          <a class="p-2 text-dark" href="{% url 'account_signup' %}">Signup</a>
-        {% endif %}
-      </nav>
+   <header>
+   <!-- Fixed navbar -->
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+   <a class="navbar-brand" href="{% url 'home' %}">Happy Fun Bouncy Template</a>
+   {% if user.is_authenticated %}
+     <ul class="navbar-nav mr-auto">
+       <li class="nav-item">
+         <a href="{% url 'home' %}">New Blog Post</a>
+       </li>
+     </ul>
+   {% endif %}
+   <button class="navbar-toggler" type="button" data-toggle="collapse"
+   data-target="#navbarSupportedContent"
+   aria-controls="navbarSupportedContent" aria-expanded="false"
+   aria-label="Toggle navigation">
+     <span class="navbar-toggler-icon"></span>
+   </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      {% if user.is_authenticated %}
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link dropdown-toggle" href="#"
+            id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+              {{ user.username }}
+            </a>
+            <div class="dropdown-menu dropdown-menu-lg-right"
+            aria-labelledby="navbarDropdown">
+              <a class="dropdown-item"
+              href="{% url 'account_set_password' %}">Change password</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item"
+              href="{% url 'account_reset_password' %}">Forgot password?</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item"
+              href="{% url 'account_email' %}">Change email</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{% url 'account_logout' %}"> Log Out</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{% url 'about' %}">About</a>
+            </div>
+          </li>
+        </ul>
+      {% else %}
+        <form class="form-inline ml-auto">
+          <a href="{% url 'account_login' %}" class="btn btn-outline-secondary">
+          Log In</a>
+          <a href="{% url 'account_signup' %}" class="btn btn-primary ml-2">
+         Sign up</a>
+          <a href="{% url 'about' %}" class="btn btn-outline-secondary ml-2">
+          About</a>
+        </form>
+      {% endif %}
     </div>
-</header>
+    </nav>
+    </header>
 <div class="container">
   {% block content %}
   {% endblock content %}
