--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,7 +1,8 @@
-{% extends 'base.html' %}
+<!-- templates/account/login.html -->
+{% extends "base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %}Log In{% endblock title %}
+{% block title %}Sign In{% endblock title %}
 
 {% block content %}
 <div class="container">
@@ -10,7 +11,8 @@
   <form class="col-md-4" method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button class="btn btn-success" type="submit">Log In</button>
+    <a class="button secondaryAction mr-2" href="{% url 'account_reset_password' %}">Forgot Password?</a>
+    <button class="primaryAction btn btn-primary" type="submit">Sign In</button>
   </form>
   </p>
 </div>
