--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
    {% if user.is_authenticated %}
      <ul class="navbar-nav mr-auto">
        <li class="nav-item">
-         <a href="{% url 'home' %}">New Blog Post</a>
+         <a class="btn btn-outline-light text-light" href="{% url 'home' %}">New Blog Post</a>
        </li>
      </ul>
    {% endif %}
@@ -35,7 +35,7 @@
       {% if user.is_authenticated %}
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link dropdown-toggle" href="#"
+            <a class="btn btn-outline-light" dropdown-toggle" href="#"
             id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
               {{ user.username }}
