--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,19 +1,22 @@
 <!-- templates/account/login.html -->
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
+{% load socialaccount %}
 
 {% block title %}Sign In{% endblock title %}
 
 {% block content %}
 <div class="container">
   <p>
-  <h2>Log In</h2>
+  <h2>Sign In</h2>
   <form class="col-md-4" method="post">
     {% csrf_token %}
     {{ form|crispy }}
     <a class="button secondaryAction mr-2" href="{% url 'account_reset_password' %}">Forgot Password?</a>
     <button class="primaryAction btn btn-primary" type="submit">Sign In</button>
   </form>
+  <p class="text-left text-muted">OR</p>
+  <a class="btn btn-dark" href="{% provider_login_url 'github' %}">Continue with GitHub</a>
   </p>
 </div>
 {% endblock content %}
