--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,6 +1,8 @@
 <!-- templates/pages/about.html -->
 {% extends 'base.html' %}
 
+{% block title %}About{% endblock title %}
+
 {% block content %}
 <div class="container">
   <p>
