--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}Jabberwock{% endblock title %}</title>
+  <title>Django Start | {% block title %}{% endblock title %}</title>
   <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}"</>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- CSS -->
