--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -54,7 +54,8 @@
     <form method="post" action="{% url 'account_email' %}" class="col-md-4 add_email">
         {% csrf_token %}
         {{ form|crispy }}
-        <button name="action_add" class="btn btn-info" type="submit">{% trans "Add E-mail" %}</button>
+        <button name="action_add" class="btn btn-primary" type="submit">{% trans "Add E-mail" %}</button>
+      <a class="btn btn-info" href="javascript:window.history.back()">Cancel</a>
     </p>
     </form>
     {% endif %}
