--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -3,7 +3,7 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "E-mail Addresses" %}{% endblock %}
+{% block title %}{% trans "E-mail Addresses" %}{% endblock title %}
 
 {% block content %}
 <div class="container">
