--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% load crispy_forms_tags %}
 
 {% load i18n %}
 
-{% block title %}{% trans "Change Password" %}{% endblock %}
+{% block title %}{% trans "Change Password" %}{% endblock title %}
 
 {% block content %}
 <div class="container">
