--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -8,7 +8,7 @@
 <div class="container">
   <p>
   <h2>Sign Up</h2>
-  <form class="col-md-4 method="post">
+  <form class="col-md-4" method="post">
     {% csrf_token %}
     {{ form|crispy }}
     <button class="btn btn-success" type="submit">Sign Up</button>
