--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,13 @@
-<!-- templates/base -->
+<!-- templates/base.html -->
 {% load static %}
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Django Start | {% block title %}{% endblock title %}</title>
   <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}"</>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
   integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
@@ -71,6 +72,24 @@
 <div class="container">
   {% block content %}
   {% endblock content %}
+  <!-- Pagination Template -->
+  {% block pagination %}
+    {% if is_paginated %}
+      <div class="pagination">
+        <span class="page-links">
+          {% if page_obj.has_previous %}
+            <a class="btn btn-info" href="{{ request.path }}?page={{ page_obj.previous_page_number }}">&laquo; previous</a>
+          {% endif %}
+          <span class="page-current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+          </span>
+          {% if page_obj.has_next %}
+          <a class="btn btn-info" href="{{ request.path }}?page={{ page_obj.next_page_number }}">next &raquo;</a>
+          {% endif %}
+        </span>
+      </div>
+    {% endif %}
+  {% endblock pagination %}
   <!-- Javascript, Popper, JQuery -->
   <script src="{% static 'js/base.js' %}"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
