--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,5 +1,5 @@
 <!-- templates/pages/about.html -->
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block title %}About{% endblock title %}
 
