--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -1,10 +1,10 @@
 <!-- templates/account/password_reset_done.html -->
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 {% load account %}
 
 {% block title %}Password Reset{% endblock title %}
 
-{% block content %}
+{% block inner %}
 <div class="container">
   <p>
     <h2>Password Reset</h2>
@@ -14,4 +14,4 @@
     <p>We have sent you an e-mail. If you have not received it please check your spam folder. Otherwise contact us if you do not receive it in a few minutes.</p>
   </p>
 </div>
-{% endblock content %}
+{% endblock inner %}
