--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -1,10 +1,10 @@
 <!-- templates/account/password_reset_from_key.html -->
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 {% load crispy_forms_tags %}
 
 {% block title %}Change Password{% endblock title %}
 
-{% block content %}
+{% block inner %}
 <div class="container">
   <p>
     <h2>{% if token_fail %}Bad Token{% else %}Change Password{% endif %}</h2>
@@ -12,7 +12,7 @@
         {% url 'account_reset_password' as passwd_reset_url %}
         <p>The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.</p>
     {% else %}
-      <form class="col-md-4" method="POST" action="{{ action_url }}">
+      <form method="POST" action="{{ action_url }}">
         {% csrf_token %}
         {{ form|crispy }}
         <button class="btn btn-success" type="submit">Change Password</button>
@@ -20,4 +20,4 @@
     {% endif %}
   </p>
 </div>
-{% endblock content %}
+{% endblock inner %}
