--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -1,18 +1,18 @@
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 {% load crispy_forms_tags %}
 
 {% load i18n %}
 
 {% block title %}{% trans "E-mail Addresses" %}{% endblock title %}
 
-{% block content %}
+{% block inner %}
 <div class="container">
   <p>
     <h2>{% trans "E-mail Addresses" %}</h2>
     {% if user.emailaddress_set.all %}
     <p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
 
-    <form action="{% url 'account_email' %}" class="col-md-8 email_list" method="post">
+    <form action="{% url 'account_email' %}" class="email_list" method="post">
     {% csrf_token %}
     <fieldset class="blockLabels">
 
@@ -51,7 +51,7 @@
     <p>
     <h3>{% trans "Add E-mail Address" %}</h3>
 
-    <form method="post" action="{% url 'account_email' %}" class="col-md-4 add_email">
+    <form method="post" action="{% url 'account_email' %}" class="add_email">
         {% csrf_token %}
         {{ form|crispy }}
         <button name="action_add" class="btn btn-primary" type="submit">{% trans "Add E-mail" %}</button>
@@ -61,7 +61,7 @@
     {% endif %}
   </p>
 </div>
-{% endblock content %}
+{% endblock inner %}
 
 
 {% block extra_body %}
