--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -1,16 +1,16 @@
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 {% load crispy_forms_tags %}
 
 {% load i18n %}
 
 {% block title %}{% trans "Change Password" %}{% endblock title %}
 
-{% block content %}
+{% block inner %}
 <div class="container">
   <p>
   <h2>{% trans "Change Password" %}</h2>
 
-  <form class="col-md-4" method="POST" action="{% url 'account_change_password' %}" class="password_change">
+  <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
       {% csrf_token %}
       {{ form|crispy }}
       <button class="btn btn-success" type="submit">{% trans 'Change Password' %}</button>
@@ -18,4 +18,4 @@
   </form>
   </p>
 </div>
-{% endblock %}
+{% endblock inner %}
