Center text in social login templates. Fixes #65

--- a/templates/socialaccount/login.html
+++ b/templates/socialaccount/login.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 {% load crispy_forms_tags %}
 
 {% block title %}Sign In Via GitHub{% endblock title %}
 
-{% block content %}
+{% block inner %}
 <div class="container">
   <p>
   <h2>Sign In Via GitHub</h2>
@@ -15,4 +15,4 @@
   </form>
   </p>
 </div>
-{% endblock content %}
+{% endblock inner %}
