--- a/templates/socialaccount/authentication_error.html
+++ b/templates/socialaccount/authentication_error.html
@@ -1,11 +1,11 @@
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 {% load crispy_forms_tags %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Social Network Login Failure" %}{% endblock %}
 
-{% block content %}
+{% block inner %}
 <div class="container">
   <p>
    <h2>{% trans "Social Network Login Failure" %}</h2>
@@ -13,4 +13,4 @@
 <p>{% trans "An error occurred while attempting to login via your social network account." %}</p>
   </p>
 </div>
-{% endblock %}
+{% endblock inner %}
