Adjust fake link

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -43,6 +43,6 @@
   <!-- End carousel template -->
   </p>
   <!-- Fake link to test BrokenLinkEmailMiddleware alerts -->
-  <a href="http://127.0.0.1:8000/fake.html">FAKE</a>
+  <a href="pages/fake.html">FAKE</a>
 </div>
 {% endblock content %}
