--- a/templates/base.html
+++ b/templates/base.html
@@ -70,6 +70,12 @@
     </nav>
     </header>
 <div class="container">
+      {% if messages %}
+          {% for message in messages %}
+              <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
+          {% endfor %}
+      {% endif %}
+
   {% block content %}
   {% endblock content %}
   <!-- Pagination Template -->
