Create contact & success page, related tests. Updated coverage report

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -43,10 +43,8 @@
   <!-- End carousel template -->
   </p>
   <ul class="container">
-      <li><a href="{% url 'sample' %}">Sample</a></li>
-      <li><a href="sample1.html">Sample Page 1</a></li>
-      <li><a href="sample1.html">Sample Page 2</a></li>
-      <li><a href="sample1.html">Sample Page 3</a></li>
+      <li><a href="{% url 'contact' %}">Contact Us!</a></li>
+      <li><a href="{% url 'sample' %}">Sample Page</a></li>
   </ul>
 </div>
 {% endblock content %}
