--- a/templates/base.html
+++ b/templates/base.html
@@ -101,5 +101,38 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js" integrity="sha384-1CmrxMRARb6aLqgBO7yyAxTOQE2AKb9GfXnEo760AUcUmFx3ibVJJAzGytlQcNXd" crossorigin="anonymous"></script>
+  <!-- Begin footer -->
+  <div class="container">
+  <div class="content"></div>
+  <footer>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
+    <div class="col-md-12 col-sm-12 col-sm-push-6">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item col-md-2">
+           <p style="color:white;font-size:60%"> &copy; 2023 django-start&reg;</p>
+          </li>
+          <li class="nav-item col-md-2">
+          </li>
+          <li class="nav-item col-md-2">
+            <a class="btn btn-outline-light btn-sm mt-1"
+                href="https://github.com/kevinbowen777/django-start" target="_blank">Source Code</a>
+          </li>
+          <li class="nav-item col-md-2">
+            <a class="btn btn-outline-light btn-sm mt-1"
+                href="https://github.com/kevinbowen777/django-start/issues" target="_blank">Bug Reports</a>
+          </li>
+          <li class="nav-item col-md-2">
+            <a class="btn btn-outline-light btn-sm mt-1"
+                href="/contact">Contact Us</a>
+          </li>
+          <li class="nav-item col-md-2">
+            <a class="btn btn-outline-light btn-sm mt-1" href="/about">About Us</a>
+          </li>
+        </ul>
+    </div>
+  </nav>
+  </footer>
+  </div>
+  <!-- End footer -->
 </body>
 </html>
