--- a/templates/pages/success.html
+++ b/templates/pages/success.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container">
   <p>
-    <h2>Success! Thank you for your message."</h2>
+    <h2>Success! Thank you for your message.</h2>
   </p>
 </div>
 {% endblock content %}
