Install & configure djlint. Fix reported issues. Resolves #104

--- a/templates/account/user_form.html
+++ b/templates/account/user_form.html
@@ -1,22 +1,27 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %}Update Profile: {{ user.username }}{% endblock %}
+{% block title %}
+  Update Profile: {{ user.username }}
+{% endblock title %}
 
 {% block content %}
-<div class="container">
-  <p>
-    <h2>{{ user.username }}</h2>
-    <form class="form-horizontal col-md-6" method="post" enctype="multipart/form-data" action="{% url 'user_update' %}">
-      {% csrf_token %}
-      {{ form|crispy }}
-      <div class="control-group">
-        <div class="controls">
-          <button type="submit" class="btn btn-primary">Update</button>
-          <a class="btn btn-info" href="javascript:window.history.back()">Cancel</a>
+  <div class="container">
+    <p>
+      <h2>{{ user.username }}</h2>
+      <form class="form-horizontal col-md-6"
+            method="post"
+            enctype="multipart/form-data"
+            action="{% url 'user_update' %}">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <div class="control-group">
+          <div class="controls">
+            <button type="submit" class="btn btn-primary">Update</button>
+            <a class="btn btn-info" href="#" onclick="window.history.back()">Cancel</a>
+          </div>
         </div>
-      </div>
-    </form>
-  </p>
-</div>
-{% endblock %}
+      </form>
+    </p>
+  </div>
+{% endblock content %}
