--- a/templates/pages/success.html
+++ b/templates/pages/success.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 
-{% block title %}Success - Message Sent{% endblock %}
+{% block title %}
+  Success - Message Sent
+{% endblock title %}
 
 {% block content %}
-<div class="container">
-  <p>
-    <h2>Success! Thank you for your message.</h2>
-  </p>
-</div>
+  <div class="container">
+    <p>
+      <h2>Success! Thank you for your message.</h2>
+    </p>
+  </div>
 {% endblock content %}
