--- a/templates/pages/sample.html
+++ b/templates/pages/sample.html
@@ -1,25 +1,30 @@
 <!-- templates/pages/sample1.html -->
 {% extends "base.html" %}
 
-{% block title %}Sample Page 1{% endblock title %}
+{% block title %}
+  Sample Page 1
+{% endblock title %}
 
 {% block content %}
-<div class="container">
-  <p>
-  <h2>Sample Page 1</h2>
+  <div class="container">
+    <p>
+      <h2>Sample Page 1</h2>
+      <p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <p>
+          Nibh praesent tristique magna sit amet purus gravida quis. Suspendisse
+          ultrices gravida dictum fusce ut. Porta nibh venenatis cras sed felis eget
+          velit aliquet sagittis. Felis eget nunc lobortis mattis aliquam faucibus purus
+          in massa.
+        </p>
+      </p>
     </p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
-    <p>Nibh praesent tristique magna sit amet purus gravida quis. Suspendisse
-ultrices gravida dictum fusce ut. Porta nibh venenatis cras sed felis eget
-velit aliquet sagittis. Felis eget nunc lobortis mattis aliquam faucibus purus
-in massa.
-    </p>
-  </p>
-</div>
+  </div>
 {% endblock content %}
