Update to 3.12.0b3. Fixes #232

--- a/templates/account/user_detail.html
+++ b/templates/account/user_detail.html
@@ -37,7 +37,7 @@
                    src="{{ object.profile_pic.url }}"
                    alt="{{ object.name }}"
                    width="400"
-                   height="250">
+                   height="250" />
             </p>
           {% endif %}
           {% if object.bio %}
