--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -11,7 +11,8 @@
     <p>
       <h2>Homepage</h2>
       <!-- Begin carousel template -->
-      <div id="demo" class="carousel slide" data-ride="carousel">
+      <!-- See https://getbootstrap.com/docs/4.6/components/carousel/ -->
+      <div id="demo" class="carousel slide carousel-fade" data-ride="carousel">
 
         <!-- Indicators -->
         <ul class="carousel-indicators">
@@ -24,32 +25,54 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="{% static 'images/babel_lib1.jpg' %}"
+                 class="d-block w-100"
                  alt="Los Angeles"
-                 width="900"
+                 width="907"
                  height="600">
+            <div class="carousel-caption d-none d-md-block">
+              <h4>The Library of Babel</h4>
+              <p>The Library is a sphere whose exact centre is...</p>
+            </div>
           </div>
           <div class="carousel-item">
             <img src="{% static 'images/babel_lib2.jpg' %}"
+                 class="d-block w-100"
                  alt="Chicago"
-                 width="900"
+                 width="907"
                  height="600">
+            <div class="carousel-caption d-none d-md-block">
+              <h4>The Library of Babel</h4>
+              <p>...of one of its hexagons and...</p>
+            </div>
           </div>
           <div class="carousel-item">
             <img src="{% static 'images/babel_lib3.jpg' %}"
+                 class="d-block w-100"
                  alt="New York"
-                 width="900"
+                 width="907"
                  height="600">
+            <div class="carousel-caption d-none d-md-block">
+              <h4>The Library of Babel</h4>
+              <p>...whose circumference is inaccessible. The Library will endure.</p>
+            </div>
           </div>
         </div>
 
         <!-- Left and right controls -->
-        <a class="carousel-control-prev" href="#demo" data-slide="prev">
-          <span class="carousel-control-prev-icon"></span>
-        </a>
-        <a class="carousel-control-next" href="#demo" data-slide="next">
-          <span class="carousel-control-next-icon"></span>
-        </a>
-
+        <button class="carousel-control-prev"
+                type="button"
+                data-target="#demo"
+                data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </button>
+        <button class="carousel-control-next"
+                type="button"
+                data-target="#demo"
+                data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </button>
       </div>
       <!-- End carousel template -->
     </p>
