Fix minor grammar & formatting

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name="viewport"
-          content="width=device-width, initial-scale=1, shrink-to-fit=no">
+          content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="keywords" content="Django, template" />
     <meta name="description" content="Basic Django project template" />
     <title>Django Start |
