Create initial type hint config. Fix admin fieldsets. Resolves #254

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -8,7 +8,7 @@
 {% block content %}
   <div class="container">
     <p>
-      <h2>About page</h2>
+      <h2>About Page</h2>
       <p>
         This is the about page where we explain why we do what we do. It's not
         terribly important but it still needs to be included.
